[project]
name = "caching_to_not_waste"
description = "This node allows you to cache/caching/store and reuse resized images, ControlNet images, masks, and texts. It avoids repeating heavy operations by loading previously saved files — accelerating generation process, saving time, memory, and processing power in future executions.."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/alastor-666-1933/caching_to_not_waste"
#  Used by Comfy Registry https://comfyregistry.org


[tool.comfy]
PublisherId = "alastor-666-1933"
DisplayName = "Caching to not waste"
Icon = ""
