[project]
name = "caching_to_not_waste"
description = "This node allows you to cache/caching/store and reuse prompts/conditionings, resized images, ControlNet images, masks, and texts. It avoids repeating heavy operations by loading previously saved files — accelerating generation process, saving time, memory, and processing power in future executions. With this, the models used in these steps will also not need to be reloaded, resulting in much faster and more efficient executions, especially on machines with limited VRAM.\n\nBy caching various elements of the workflow, the execution of these workflow segments—as well as the loading of the models used in these steps—will no longer be necessary, resulting in much faster and more efficient executions, especially on machines with limited VRAM.\n\nFor more information, check GitHub. [a/Caching to not Waste](https://github.com/alastor-666-1933/caching_to_not_waste)"

version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/alastor-666-1933/caching_to_not_waste"
#  Used by Comfy Registry https://comfyregistry.org


[tool.comfy]
PublisherId = "alastor-666-1933"
DisplayName = "Caching to not Waste"
Icon = ""
